--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li>I play Minecraft!</li>
             <li>Not a furry, don't stereotype me, seriously.</li>
             <li>Chinese/English OK</li>
+            <li>My email: <code id="email">click to reveal</code></li>
         </ul>
         <p>I haven't posted this site anywhere, and there is robots.txt to prohibit bots from crawling it. You got here on your own!</p>
         <p>Or is this enough information for you to investigate me in depth? lol</p>
